<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/patients"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/firstName"
            />
       	<EditText
       	    android:id="@+id/FirstName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
   <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/lastName"
            />
       	<EditText
       	    android:id="@+id/lastName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/address"
            />
       	<EditText
       	    android:id="@+id/address"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/city"
            />
       	<EditText
       	    android:id="@+id/city"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/state"
            />
       	<EditText
       	    android:id="@+id/state"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/phoneNumber"
            />
       	<EditText
       	    android:id="@+id/phoneNumber"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/gender"
            />
       	<EditText
       	    android:id="@+id/gender"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/race"
            />
       	<EditText
       	    android:id="@+id/race"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/weight"
            />
       	<EditText
       	    android:id="@+id/weight"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/height"
            />
       	<EditText
       	    android:id="@+id/height"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/insurance"
            />
       	<EditText
       	    android:id="@+id/insurance"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
</TableLayout>