<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appointments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/firstName"
            />
       	<EditText
       	    android:id="@+id/FirstName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
   <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/lastName"
            />
       	<EditText
       	    android:id="@+id/lastName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/doctorFName"
            />
       	<EditText
       	    android:id="@+id/docFName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/doctorLName"
            />
       	<EditText
       	    android:id="@+id/docLName"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/date"
            />
       	<EditText
       	    android:id="@+id/dateTime"
       	    android:hint="Enter text here"
       	    android:inputType="text"
       	    />
      </TableRow>
</TableLayout>